--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/medcare_dev"
+DATABASE_URL="postgresql://username:password@localhost:5432/db-name?schema=public"
 
 # JWT
 JWT_SECRET="" # seu-secret-super-seguro-mude-isso
@@ -10,4 +10,4 @@ PORT=3000
 NODE_ENV=development
 
 # CORS
-CORS_ORIGIN="http://localhost:5173"
+CORS_ORIGIN="http://localhost:3001"
