--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,6 +17,6 @@
     "target": "ES2023",
     "types": ["node"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "prisma/**/*", "tests/**/*"],
   "exclude": ["node_modules", "dist", "tests"]
 }
